添加sbt安装